<resources>
    <string name="app_name">Dressy</string>

    <!-- SIGN PAGES  -->
    <string name="sign_username">Identifiant</string>
    <string name="sign_password">Mot de passe</string>
    <string name="sign_forgot_password">Mot de passe oublié</string>
    <string name="to_sign_in">Se connecter</string>
    <string name="to_sign_up">S\'inscrire</string>
    <string name="sign_in">Connexion</string>
    <string name="sign_up">Inscription</string>
    <string name="sign_mail">Email</string>
    <string name="sign_user_first_name">Prénom</string>

    <!-- COMMUNITY PAGES -->
    <string name="comm_news_title">Nouveautées</string>
    <string name="comm_leader_title">Tops</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="from">Par</string>
    <string name="description">Description</string>
    <string name="comm_detail_cloth_in_clothes">Les habits de la tenue</string>
    <string name="comm_title">Communauté</string>
    <string name="armory_title">Mon armoire</string>
    <string name="ward_clothes_title">Mes Tenues</string>
    <string name="ward_clothe_title">Mes habits</string>
    <string name="ward_robe_clothes_add">Ajouter une tenue</string>
    <string name="ward_robe_clothe_add">Ajouter un habit</string>
    <string name="name">Nom</string>
    <string name="color">Couleur</string>
    <string name="reference">Reference</string>
    <string name="type">Type</string>
    <string name="brand">Marque</string>
    <string name="material">Matière</string>
    <string name="partner">Partenaire</string>
    <string name="sign_last_name">Nom</string>
    <string name="sign_pseudo">Pseudo</string>
    <string name="sign_country">Pays</string>
    <string name="error_sign_up">Erreur lors de la creation de votre compte, SVP, réessayer plus tard</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="match_title">Je choisis un habit depuis : </string>
    <string name="choose_dress_from">Je choisis un habit depuis :</string>
    <string name="save">Enregistrer</string>
    <string name="image">image</string>
    <string name="category">Categorie</string>
    <string name="find_match">Lancer la recherche</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="edit_title">Que souhaitez-vous faire ?</string>
    <string name="share_on_socialwall">Partager sur le mur social</string>
    <string name="title">Titre</string>
    <string name="share">Partager</string>
    <string name="add_clothe">Ajouter des habits</string>
    <string name="manage">Modifier</string>
    <string name="errorGetUser">Erreur lors de la récuperation de votre compte, veuillez reessayer</string>
    <string name="errorCreateUser">Erreur lors de la création de votre compte, veuillez reessayer</string>

    <string name="errorGetClothe">Erreur lors de la récupération de votre habits</string>
    <string name="errorCreateClothe">Erreur lors de la création de votre habit</string>
    <string name="errorDeleteClothe">Erreur lors de la suppression de votre habit</string>
    <string name="errorManageClothe">Erreur lors de la modification de votre habit</string>

    <string name="errorGetClothes">Erreur lors de la récupération de votre tenue</string>
    <string name="errorCreateClothes">Erreur lors de la création de votre tenue</string>
    <string name="errorDeleteClothes">Erreur lors de la suppression de votre tenue</string>
    <string name="errorManageClothes">Erreur lors de la modification de votre tenue</string>

    <string name="errorGetSimilarity">Erreur lors de la récupération de vos habits compatibles</string>
    <string name="errorCreatePost">Erreur lors de la création de votre Post</string>
    <string name="errorGetClotheProperties">Impossible de récupérer les propriétés des habits</string>
    <string name="no_clothe">Vous n\'avez pas d\'habits</string>
    <string name="no_clothes">Vous n\'avez pas de tenues</string>
    <string name="errorGetPost">Erreur lors de la récuperation des posts</string>
    <string name="no_posts">Pas de posts</string>
    <string name="maPhoto">Ma photo</string>
    <string name="habitsCompatibles">Vos habits compatibles</string>
    <string name="habitsCompatiblesSurLeWeb">Recommandations sur le web</string>
</resources>
