<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/view_create_clothe"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/image"
                android:id="@+id/clothe_create_image"
                android:layout_width="match_parent"
                android:layout_height="220dp" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/clothe_create_name"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/clothe_create_color"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/color"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:maxLines="1"
                        android:id="@+id/clothe_create_reference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reference"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:text="@string/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/clothe_create_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/clothe_create_brands"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/clothe_create_materials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLight"
                android:background="@drawable/button_primary"
                android:text="@string/save"/>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>