<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_marginBottom="5dp"
            android:id="@+id/sign_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_username"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/sign_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_password"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:gravity="center"
            android:text="@string/to_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/colorLight"
            android:background="@drawable/button_primary"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/sign_connexion"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:textColorHint="@color/colorLight"
            android:layout_gravity="center"
            android:textColor="@color/colorDark"
            android:text="@string/sign_forgot_password"
            android:id="@+id/sign_forgot_password"/>

    </LinearLayout>

</LinearLayout>