<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/view_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/manage_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"/>

            <Button
                android:layout_weight="5"
                android:id="@+id/manage_btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorLight"
                android:text="@string/add_clothe"
                android:background="@drawable/button_primary"/>

            <GridView
                android:padding="10dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/manage_clothes_list"
                android:columnWidth="100dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="5dp"
                android:horizontalSpacing="5dp"
                android:stretchMode="columnWidth"
                android:scrollbarStyle="outsideOverlay"
                android:gravity="center">
            </GridView>


            <Button
                android:layout_weight="5"
                android:id="@+id/manage_btn_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorLight"
                android:text="@string/save"
                android:background="@drawable/button_primary"/>

        </LinearLayout>



    <ProgressBar
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
