<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/from"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/community_detail_user"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/colorLight"
        android:id="@+id/community_detail_title"
        android:background="@color/colorPrimary"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/community_detail_image"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center">
            <TextView
                android:textColor="@color/colorLight"
                android:textSize="25sp"
                android:gravity="center"
                android:background="@drawable/circle_blue"
                android:id="@+id/community_detail_score"
                android:layout_width="50dp"
                android:layout_height="50dp" />

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:padding="5dp"
            style="@style/title"
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/community_detail_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/comm_detail_cloth_in_clothes"
            />
        <GridView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/community_detail_clothe_list"
            android:columnWidth="90dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center">

        </GridView>
    </LinearLayout>
</LinearLayout>
</ScrollView>